Fix error where listContainer broke the outerContainer due to overflow issues by adding overflow: scroll; and changing min-height: 85%; back to height: 85%;

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -58,9 +58,10 @@ input[type="text"] {
 }
 
 .listContainer {
-    min-height: 85%;
+    height: 85%;
     width: $max-width;
     padding: 0;
+    overflow: scroll;
 }
 
 .listStatus {
